Fixed table issues

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="One stop platform for latest updates, verified data and analysis for World Wide cases. And for India, you can get latest updates on corona of each state and district. " />
 
   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
